<resources>
    <string name="app_name">Cadastro de Pessoas</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="idade">Idade</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="adicionar">Adicionar</string>
    <string name="clique_em_salvar">Clique em salvar!</string>
    <string name="campo_obrigatorio">Por favor, informe o %1$s!</string>
    <string name="ver_todos">Ver todos</string>
    <string name="salvar">Salvar</string>
</resources>
